--- a/App04_web/Views/Home/Index.cshtml
+++ b/App04_web/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-left">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <section>
+        <ol>
+            <li> <class = "list-group-item">
+                <a class="btn btn-success" asp-controller="Newsfeeds" asp-action="Index">App01</a>
+            </li>
+            <li>
+                <class ="list-group-item">
+                    <a class="btn btn-success" asp-controller="Newsfeeds" asp-action="Index">App02</a>
+            </li>
+            <li>
+                <class ="list-group-item">
+                    <a class="btn btn-success" asp-controller="Newsfeeds" asp-action="Index">App03</a>
+            </li>
+            <li>
+                <class ="list-group-item">
+                    <a class="btn btn-success" asp-controller="Newsfeeds" asp-action="Index">App04</a>
+            </li>
+        </ol>
+
+    </section>
+
 </div>
