--- a/App04_web/wwwroot/css/site.css
+++ b/App04_web/wwwroot/css/site.css
@@ -20,3 +20,15 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
